# backtrader_web

./: .commitlintrc.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  00_STRATEGY_SUMMARY_PROMPT.md  10x_speed_processor.py  10x_speed_processor_enhanced.py  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_REPORT.md  FINAL_REPORT_COMPLETE.md  LICENSE  PROJECT_COMPLETE.md  README.en.md  README.md  backtrader_web项目介绍.md  batch_process_strategies.py  batch_process_strategies_final.py  batch_process_strategies_final_v2.py  batch_process_strategies_fixed.py  batch_process_strategies_simple.py  batch_simple.py  batch_simple.sh  batch_simple2.py  check_packages.py  claude_direct.sh  claude_npx.sh  claude_simple.sh  docker-compose.ci.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  final_verification.sh  install_deps.sh  install_deps_fixed.sh  install_with_pip.sh  (+24 more)
src/backend/: .coveragerc  .env.example  Dockerfile  FINCORE_MIGRATION.md  README.md  alembic.ini  check_imports.py  coverage.json  fix_auth_tests.py  manual_verify.sh  package-lock.json  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  simple_check.py  test_acceptance_124.py
src/backend/.venv-smoke-ci/: pyvenv.cfg
src/backend/.venv-smoke-ci2/: pyvenv.cfg
src/backend/alembic/: env.py
src/backend/app/: __init__.py  config.py  main.py  main_final.py  main_minimal.py  rate_limit.py  websocket_manager.py
src/backend/config/: default_symbols.yaml  quote_fields.yaml
src/backend/coverage/: clover.xml  index.html
(+14994 files in other folders)
